# combat_gl

./: .gitmodules  CMakeLists.txt  TODO.md
assets/gltf/: tenk6a.gltf  tenk7.gltf  tenk9aa.gltf  wall-and-floor.gltf
assets/shaders/: basic.fs.glsl  basic.vs.glsl  quad.fs.glsl  quad.vs.glsl  shadow.vs.glsl
src/: App.h  Buffer.h  Shader.h  main.cpp  verts.h
src/applesauce/: AltMesh.cpp  AltMesh.h  App.h  Buffer.h  Camera.h  Debug.h  Entity.h  GLResource.h  Input.cpp  Input.h  Mesh.cpp  Mesh.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  VertexArray.h  VertexBuffer.h  Window.cpp  Window.h
src/game/: Collision.cpp  Collision.h
src/game/entities/: Level.h  Tenk.h  TestArea.h
src/util/: base64.cpp  base64.h  gltf.cpp  gltf.h
tests/: AppleSauceTest.h  CMakeLists.txt  main.cpp  test_Buffer.cpp  test_DecodeBase64.cpp  test_EarlyAppTests.cpp  test_Texture.cpp  test_VertexArray.cpp  test_VertexBuffer.cpp  test_glTFLoading.cpp
